# data-lab

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.electron.json  tsconfig.node.json  vite.config.ts
apps/bootstrap-installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/bootstrap-installer/src-tauri/capabilities/: default.json
apps/bootstrap-installer/src-tauri/icons/: icon.icns
apps/bootstrap-installer/src-tauri/src/: lib.rs  main.rs
config/: datahub-mcp.example.json
docs/: accessibility.md  agent-workflow.md  datahub-oss-e2e.md  devpost-submission-answers.md  hackathon-submission.md  macos-releases.md  performance.md  threat-model.md  windows-desktop.md
electron/: active-ai-source.test.ts  active-ai-source.ts  agent-tools.test.ts  agent-tools.ts  ai-provider.test.ts  ai-provider.ts  app-updater.ts  chatgpt-session-tools.test.ts  chatgpt-session.ts  datahub-context.test.ts  datahub-context.ts  datahub-mcp.test.ts  datahub-mcp.ts  datahub.ts  diagnostics.test.ts  diagnostics.ts  human-review-notifications.test.ts  human-review-notifications.ts  ipc-boundary.test.ts  main.ts  preload.cts  proposal-contract.test.ts  proposal-contract.ts  proposal-schema.ts  release-config.test.ts  secure-storage.test.ts  secure-storage.ts  setup-updater.test.ts  setup-updater.ts  update-policy.test.ts  update-policy.ts  window-platform.test.ts  window-platform.ts  workspace-db.test.ts  workspace-db.ts
examples/: agent-review.json  customer-governance.pipeline.json  generated-transform.sql
src/: App.tsx  (+4 more)
(+138 files in other folders)
